<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:background="#ffffff"
    tools:context=".activities.PatientData"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginBottom="30dp"
        >
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_doctor_name"
            android:textColor="#184967"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_margin="5dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="start"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:id="@+id/list_doctors"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/series_layout"
            app:boxStrokeColor="#184967"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/series"
            android:textColorHint="#184967"
            android:layout_margin="10dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_series"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#0a66ae"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_patient_layout"
        app:boxStrokeColor="#184967"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_patient"
        android:textColorHint="#184967"
        android:layout_margin="10dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_name_patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="#0a66ae"
            android:inputType="text"


            />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_layout"
            app:boxStrokeColor="#184967"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:textColorHint="#184967"
            android:layout_margin="10dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#0a66ae"
                android:inputType="number"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumber_layout"
            app:boxStrokeColor="#184967"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColorHint="#184967"
            android:layout_margin="10dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#0a66ae"
                android:inputType="phone"

                />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_layout"
            app:boxStrokeColor="#184967"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColorHint="#184967"
            android:layout_margin="10dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#0a66ae"
                android:inputType="textMultiLine"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/job_layout"
            app:boxStrokeColor="#184967"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job"
            android:textColorHint="#184967"
            android:layout_margin="10dp"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="#0a66ae"
                android:inputType="textMultiLine"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/transparent"
            >

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/RippleStyleGrey"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/background_button"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/send"
                    />

            </com.balysv.materialripple.MaterialRippleLayout>

        </androidx.cardview.widget.CardView>
</LinearLayout>
    </ScrollView>

</RelativeLayout>
