<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layoutDirection="ltr"
    tools:context=".activities.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_text"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#184967"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_text"
            android:padding="10dp"
            android:textSize="17sp"
            android:textColor="#184967"
            android:gravity="center"

            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="3dp"

            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_card_view"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageemail"
                    app:srcCompat="@drawable/ic_email"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    tools:ignore="VectorDrawableCompat" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailAddress_layout"
                    app:boxStrokeColor="#184967"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/email_address"
                    android:textColorHint="#184967"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imageemail"
                    android:layout_margin="10dp"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#0a66ae"
                        android:padding="10dp"
                        android:inputType="textEmailAddress"

                        />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"

            >

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/RippleStyleGrey"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_findAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/find_account"
                    android:background="@drawable/background_button"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textStyle="bold"

                    />

            </com.balysv.materialripple.MaterialRippleLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>